--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 # Rename this file to .env
 
 # Status API Settings
-API_KEY=example
 HOST=0.0.0.0
 PORT=5000
 
@@ -12,11 +11,5 @@ PORT=5000
 ### ALLOWED_WEBSITES = "*" will allow all websites
 ALLOWED_WEBSITES=""
 
-# Instagram story
-# leave this variables empty if INSTAGRAM_STORY_CANCELED and INSTAGRAM_STORY_ENGLISH are set to "false"
-INSTAGRAM_USERNAME=""
-INSTAGRAM_PASSWORD=""
-# Can be "true" or "false"
-INSTAGRAM_STORY_CANCELED="false"
-INSTAGRAM_STORY_GERMAN="false"
-INSTAGRAM_STORY_ENGLISH="false"
+# Admin API KEY
+API_KEY=example
