--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,52 @@
-# Rename this file to .env
+# .env.example - Example configuration for Nightlight Status API
+# Copy this file to .env and update values as per your environment
 
-# Status API Settings
-HOST=0.0.0.0
-PORT=5000
+## ------------------------------
+## General Settings
+## ------------------------------
 
-# CORS configuration
-## Website URLs which are allowed to fetch the status API
-### ALLOWED_WEBSITES = "example1.com, example2.com" will allow the both domains
-### ALLOWED_WEBSITES = ""  will dissallow all websites
-### ALLOWED_WEBSITES = "*" will allow all websites
-ALLOWED_WEBSITES=""
+# Host and Port to run the API
+HOST="0.0.0.0"          # Set to "0.0.0.0" for external access (use "127.0.0.1" for localhost only)
+PORT="5000"             # Port for the Status API to listen on
 
-# Admin API KEY
-API_KEY=example
-# Admin routes
-ENABLE_ADMIN_ROUTES=true
+## ------------------------------
+## CORS Configuration
+## ------------------------------
+# Configure websites allowed to fetch the status API
+# - ""  = Block all websites
+# - "*" = Allow all websites
+# - "example1.com, example2.com" = Allow only listed websites
+CORS_ALLOWED_WEBSITES=""    # Example: "https://example.com, https://another-example.com"
+
+## ------------------------------
+## Admin Settings
+## ------------------------------
+
+# Admin API Key for accessing protected admin routes
+API_KEY="example"       # Replace 'example' with a secure key for production
+
+# Enable or Disable Admin Routes
+ENABLE_ADMIN_ROUTES="true"  # Set to 'false' to disable admin routes for production
+
+## ------------------------------
+## Logging Configuration
+## ------------------------------
+
+# Log Level (e.g., DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL="DEBUG"     # Recommended for development, use "INFO" or higher for production
+
+# Enable or Disable logging to a file
+LOG_TO_FILE="false"   # Set to 'true' to enable file logging, 'false' to disable
+
+# File Log Format (leave empty for default or set to "json" for JSON formatting)
+FILE_LOG_FORMAT=""    # Set to "json" for JSON formatted logs, leave empty for default format
+
+## ------------------------------
+## API Documentation
+## ------------------------------
+
+# Set this to 'true' to generate API documentation
+# Documentation will be available at '/docs' endpoint, accessible by anyone.
+# Set to 'false' in production for security.
+GENERATE_API_DOCUMENTATION="false"  # Set to 'true' for dev, 'false' for production
+
