fix logging and .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,11 @@
 ## ------------------------------
 
 # Host and Port to run the API
-HOST="0.0.0.0"          # Set to "0.0.0.0" for external access (use "127.0.0.1" for localhost only)
-PORT="5000"             # Port for the Status API to listen on
+# Set to "0.0.0.0" for external access (use "127.0.0.1" for localhost only)
+HOST="0.0.0.0"
+# Port for the Status API to listen on
+PORT="5000"
+
 
 ## ------------------------------
 ## CORS Configuration
@@ -16,30 +19,36 @@ PORT="5000"             # Port for the Status API to listen on
 # - ""  = Block all websites
 # - "*" = Allow all websites
 # - "example1.com, example2.com" = Allow only listed websites
-CORS_ALLOWED_WEBSITES=""    # Example: "https://example.com, https://another-example.com"
+# Example: "https://example.com, https://another-example.com"
+CORS_ALLOWED_WEBSITES=""
 
 ## ------------------------------
 ## Admin Settings
 ## ------------------------------
 
 # Admin API Key for accessing protected admin routes
-API_KEY="example"       # Replace 'example' with a secure key for production
+# Replace 'example' with a secure key for production
+API_KEY="example"
 
 # Enable or Disable Admin Routes
-ENABLE_ADMIN_ROUTES="true"  # Set to 'false' to disable admin routes for production
+# Set to 'false' to disable admin routes for production
+ENABLE_ADMIN_ROUTES="true"
 
 ## ------------------------------
 ## Logging Configuration
 ## ------------------------------
 
 # Log Level (e.g., DEBUG, INFO, WARNING, ERROR, CRITICAL)
-LOG_LEVEL="DEBUG"     # Recommended for development, use "INFO" or higher for production
+# Recommended for development, use "INFO" or higher for production
+LOG_LEVEL="INFO"
 
 # Enable or Disable logging to a file
-LOG_TO_FILE="false"   # Set to 'true' to enable file logging, 'false' to disable
+# Set to 'true' to enable file logging, 'false' to disable
+LOG_TO_FILE="false"
 
 # File Log Format (leave empty for default or set to "json" for JSON formatting)
-FILE_LOG_FORMAT=""    # Set to "json" for JSON formatted logs, leave empty for default format
+# Set to "json" for JSON formatted logs, leave empty for default format
+FILE_LOG_FORMAT=""
 
 ## ------------------------------
 ## API Documentation
@@ -48,5 +57,6 @@ FILE_LOG_FORMAT=""    # Set to "json" for JSON formatted logs, leave empty for d
 # Set this to 'true' to generate API documentation
 # Documentation will be available at '/docs' endpoint, accessible by anyone.
 # Set to 'false' in production for security.
-GENERATE_API_DOCUMENTATION="false"  # Set to 'true' for dev, 'false' for production
+# Set to 'true' for dev, 'false' for production
+GENERATE_API_DOCUMENTATION="false"
 
