add instagram account db model

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,15 @@ FILE_LOG_FORMAT=""
 
 
 ## ------------------------------
+## Instagram Story Posts & Encryption
+## ------------------------------
+
+# The encryption password used for securely storing and encrypting Instagram account data
+# This password is used to generate a key to encrypt sensitive Instagram account information.
+ENCRYPTION_PASSWORD=meinSehrGeheimesPasswort
+
+
+## ------------------------------
 ## API Documentation
 ## ------------------------------
 
