--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12", "3.13"]   # Teste auf mehreren Python-Versionen
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -30,36 +30,52 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Install dependencies
+      - name: Cache virtualenv
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: ${{ runner.os }}-venv-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-${{ matrix.python-version }}-
+
+      - name: Setup virtual environment and install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pip-audit bandit black flake8 coverage pytest mypy
+          python -m venv .venv
+          .venv/bin/pip install --upgrade pip
+          .venv/bin/pip install -r requirements.txt
+          .venv/bin/pip install pip-audit bandit flake8 mypy
 
-      # --- Linting & Formatting ---
       - name: Lint with flake8
-        run: flake8 app/ test/
-
-      - name: Check formatting with black
-        run: black --check app/ test/
+        run: .venv/bin/flake8 -v app/ test/
 
       - name: Type check with mypy
-        run: mypy app/
+        run: .venv/bin/mypy app/
 
-      # --- Security ---
       - name: Run pip-audit (dependency vulnerabilities)
-        run: pip-audit
+        run: .venv/bin/pip-audit --json
 
       - name: Run Bandit (static security analysis)
-        run: bandit -r app/ -ll
+        run: .venv/bin/bandit -r app/ -ll -v
 
-      # --- Testing with coverage ---
       - name: Run tests with pytest and coverage
-        run: pytest --cov=app --cov-fail-under=80 --cov-report=term-missing --cov-report=xml
+        run: .venv/bin/pytest -v --cov=app --cov-fail-under=80 --cov-report=term-missing --cov-report=xml
 
-      # --- Upload coverage artifact ---
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: coverage.xml
+
+      - name: Upload pytest logs on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-logs
+          path: pytest.log
+
+      - name: Upload flake8 logs on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flake8-logs
+          path: flake8.log
