--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -43,10 +43,10 @@ jobs:
           python -m venv .venv
           .venv/bin/pip install --upgrade pip
           .venv/bin/pip install -r requirements.txt
-          .venv/bin/pip install pip-audit bandit flake8 mypy
+          .venv/bin/pip install pip-audit bandit mypy
 
-      - name: Lint with flake8
-        run: .venv/bin/flake8 -v app/ test/
+      - name: Lint with pylint
+        run: .venv/bin/pylint --errors-only $(git ls-files '*.py') | tee pylint.log
 
       - name: Type check with mypy
         run: .venv/bin/mypy app/
@@ -73,9 +73,9 @@ jobs:
           name: pytest-logs
           path: pytest.log
 
-      - name: Upload flake8 logs on failure
+      - name: Upload pylint logs on failure
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: flake8-logs
-          path: flake8.log
+          name: pylint-logs
+          path: pylint.log
