--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -45,11 +45,17 @@ jobs:
           .venv/bin/pip install -r requirements.txt
           .venv/bin/pip install pip-audit bandit mypy
 
+      - name: Sort headers using isort
+        run: .venv/bin/isort $(git ls-files '*.py')
+
+      - name: Format code using black
+        run: .venv/bin/black $(git ls-files '*.py')
+
       - name: Lint with pylint
         run: .venv/bin/pylint --errors-only $(git ls-files '*.py') | tee pylint.log
 
-      - name: Type check with mypy
-        run: .venv/bin/mypy app/
+      - name: Type check using mypy
+        run: .venv/bin/mypy app
 
       - name: Run pip-audit (dependency vulnerabilities)
         run: .venv/bin/pip-audit --json
@@ -70,12 +76,14 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-logs
+          name: pytest-logs-${{ matrix.python-version }}
           path: pytest.log
+          overwrite: true
 
       - name: Upload pylint logs on failure
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: pylint-logs
+          name: pylint-logs-${{ matrix.python-version }}
           path: pylint.log
+          overwrite: true
