--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-[tool.autopep8]
-ignore = ["E302"]  # Don't enforce two blank lines before top-level functions
-
 [tool.pytest.ini_options]
 pythonpath = "."
 addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-config=coverage.ini"
@@ -8,3 +5,6 @@ filterwarnings = [
     "ignore::DeprecationWarning",
     "ignore::PendingDeprecationWarning",
 ]
+
+[tool.isort]
+profile = "black"
