fix lintin errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ filterwarnings = [
 profile = "black"
 
 [tool.black]
-line-length = 140
+line-length = 160
 
 [tool.pylint."MESSAGES CONTROL"]
-max-line-length = 140
+max-line-length = 160
+
+[tool.mypy]
+strict = true
+ignore_missing_imports = true
