--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -64,13 +64,19 @@ jobs:
         run: .venv/bin/bandit -r app/ -ll -v
 
       - name: Run tests with pytest and coverage
-        run: .venv/bin/pytest -v --cov=app --cov-fail-under=80 --cov-report=term-missing --cov-report=xml
+        run: .venv/bin/pytest -v --cov=app --cov-fail-under=80 --cov-report=term-missing --cov-report=xml --cov-report=html
 
-      - name: Upload coverage report
+      - name: Upload XML coverage report
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report-${{ matrix.python-version }}
           path: coverage.xml
+
+      - name: Upload HTML coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-coverage-${{ matrix.python-version }}
+          path: htmlcov/
 
       - name: Upload pytest logs on failure
         if: failure()
