--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -76,7 +76,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: html-coverage-${{ matrix.python-version }}
-          path: htmlcov/
+          path: coverage_html_report/
 
       - name: Upload pytest logs on failure
         if: failure()
