--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ CORS_ALLOWED_WEBSITES=""
 
 # Admin API Key for accessing protected admin routes
 # Replace 'example' with a secure key for production
-API_KEY="example"
+ADMIN_API_KEY="example"
 
 # Enable or Disable Admin Routes
 # Set to 'false' to disable admin routes for production
