--- a/.github/workflows/build-api-docs.yaml
+++ b/.github/workflows/build-api-docs.yaml
@@ -1,9 +1,12 @@
 name: Build and Publish API Docs
-
 on:
   push:
     branches:
       - main
+
+permissions:
+  contents: read
+  actions: write
 
 jobs:
   build-docs:
@@ -23,7 +26,7 @@ jobs:
       - name: Wait for API to be ready
         run: |
           for i in {1..30}; do
-            if curl -s http://localhost:5000/swagger.json > /dev/null; then
+            if docker exec nightlight-centralized-api curl -s http://localhost:5000/swagger.json > /dev/null; then
               echo "API is ready!"
               break
             fi
@@ -31,9 +34,15 @@ jobs:
             sleep 1
           done
 
+      - name: Show container logs
+      run: docker logs nightlight-centralized-api
+
       # Download the Swagger JSON spec
       - name: Download Swagger JSON
-        run: curl http://localhost:5000/swagger.json -o swagger.json
+        run: docker exec nightlight-centralized-api curl http://localhost:5000/swagger.json -o /tmp/swagger.json
+
+      - name: Copy swagger.json to runner
+        run: docker cp nightlight-centralized-api:/tmp/swagger.json ./swagger.json
 
       # Setup Node.js for redoc-cli
       - uses: actions/setup-node@v4
