--- a/.github/workflows/build-api-docs.yaml
+++ b/.github/workflows/build-api-docs.yaml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Copy .env.example to .env
+        run: cp .env.example .env
+
       # Build the Docker image for your Flask API
       - name: Build Docker image
         run: docker build -t nightlight-centralized-api .
