--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
 services:
-  api:
+  nightlight_api:
     build:
       context: .
       dockerfile: Dockerfile
     restart: unless-stopped
-    ports:
+    expose:
       - "${PORT}:5000"
     env_file:
       - .env
+    volumes:
+      -  "/srv/volumes/nightlight_api:/app/instance"
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:5000"]
       interval: 300s
       retries: 3
       start_period: 10s
       timeout: 10s
+    networks:
+      - reverseproxy
+
+volumes:
+  db_instances:
+
+networks:
+  reverseproxy:
+    external: true
